--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <header>
             <div class="container-grid">
                 <img src="./img/logo.png" alt="Logo da empresa NytroOn">
+                <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"></svg>
                 <nav class="menu">
                     <a href="home">Home</a>
                     <a href="cases">Cases</a>
@@ -220,7 +221,7 @@
                 <input id="campo-telefone" placeholder="Digite seu telefone" type="tel">
             </div>
             <div class="campo-descricao">
-                <label for="campo-texto">Descreva um pouco sobre sua empresa e o problemaque está enfrentando.</label>
+                <label for="campo-texto">Descreva um pouco sobre sua empresa e o problema que está enfrentando.</label>
                 <textarea placeholder="Descreva sua empresa e o problema que enfrenta..." id="campo-texto" cols="30"
                     rows="10"></textarea>
             </div>
@@ -266,7 +267,7 @@
                     </a>
                 </div>
             </div>
-            <img src="img/footerlogo.png" alt="Logo da empresa NytroOn">
+            <img src="img/logo.png" alt="Logo da empresa NytroOn">
         </div>
     </footer>
 
