--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -21,14 +23,20 @@
         <header>
             <div class="container-grid">
                 <img src="./img/logo.png" alt="Logo da empresa NytroOn">
-                <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"></svg>
-                <nav class="menu">
+
+                <nav id="menu" class="menu">
                     <a href="home">Home</a>
                     <a href="cases">Cases</a>
                     <a href="sobre">Sobre</a>
                     <a href="contato">Contato</a>
-                    <div class="botao"><button>Formulário</button></div>
+                    <button class="botao">Formulário</button>
                 </nav>
+               
+                    <button class="hamburguer" onclick="abreFechaMenu()">
+                        <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+                        <svg id="icone-x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+                    </button>
+                
             </div>
         </header>
         <div class="container-grid conteudo-banner">
@@ -207,7 +215,7 @@
     <section id="contato">
         <h5>Entre em contato conosco!</h5>
 
-        <form>
+        <form onsubmit="solicitarOrcamento(event)">
             <div class="campo">
                 <label for="campo-nome">Qual é o seu nome?</label>
                 <input id="campo-nome" placeholder="Digite o seu nome" type="text">
